# rn-cross-platform-demo

./: .npmrc  App.tsx  README.md  app.json  metro.config.js  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/mars5app/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
harmony/: build-profile.json5  oh-package.json5
harmony/AppScope/: app.json5
harmony/AppScope/resources/base/element/: string.json
harmony/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
harmony/entry/src/main/: module.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
harmony/entry/src/main/ets/: RNPackagesFactory.ets
harmony/entry/src/main/ets/pages/: Index.ets
ios/: Podfile
ios/MARS5App/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/MARS5App.xcodeproj/: project.pbxproj
ios/MARS5App.xcodeproj/xcshareddata/xcschemes/: MARS5App.xcscheme
